fixed chat layout issues in mobile

--- a/public/bootstrap/less/mtrp.less
+++ b/public/bootstrap/less/mtrp.less
@@ -200,50 +200,6 @@ border-left: 1px solid @trpLightGrey;
     height: 50px;
   }
 
-  .trpChatContainer {
-    max-width: 300px;
-  }
-
-  .trpChatInput {
-    padding-bottom: 15px;
-    padding-top: 0px;
-    padding-right: 0px;
-    border-bottom: 1px solid @trpOffWhite;
-    height: 30px;
-  }
-
-  .frame-chat {
-    max-width: 320px;
-    overflow: hidden;
-  }
-
-  .trpChatBox {
-    font-size: 12px;
-    padding: 12px;
-    max-height: 20px;
-    background-color: transparent;
-    max-width: 210px;
-    display: inline-block;
-  }
-
-  .trpChatBubble {
-    max-width: 160px;
-    margin-bottom: 6px;
-    padding-left: 20px;
-  }
-
-  .trpChatRow {
-    padding-left: 0px;
-    max-width: 320px;
-    overflow-x: hidden;
-  }
-
-  .trpChatRowRemote {
-    padding-left: 0px;
-    max-width: 320px;
-    overflow-x: hidden;
-  }
-
   .trpFileViewItem {
     float: left;
     padding-top: 20px;
